fix(layout): Use box-sizing: border-box for all element to stop the border increasing the size of the element and causing the page to be slightly too long

--- a/app/main.sass
+++ b/app/main.sass
@@ -5,6 +5,8 @@ $fa-font-path: "../bower_components/font-awesome/fonts"
 @import colors/sass/colors.scss
 // endbower
 
+*, *:before, *:after
+    box-sizing: border-box
 
 @import components/Homepage/Homepage
 
